fix: news__inner align-center

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -529,6 +529,7 @@ a {
 .news__inner {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .news__more {
